<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Regbutton"
        android:layout_width="182dp"
        android:layout_height="55dp"
        android:text="@string/Regbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:text="@string/button3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Regbutton"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/Docappbtn"
        android:layout_width="176dp"
        android:layout_height="114dp"
        android:text="@string/Docappbtn"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Regbutton"
        app:layout_constraintVertical_bias="0.419" />

    <Button
        android:id="@+id/labbtn2"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:text="@string/labbtn2"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Docappbtn"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/healthbtn"
        android:layout_width="173dp"
        android:layout_height="55dp"
        android:text="@string/healthbtn"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toEndOf="@+id/labbtn2"
        app:layout_constraintTop_toBottomOf="@+id/Docappbtn"
        app:layout_constraintVertical_bias="0.459" />

</androidx.constraintlayout.widget.ConstraintLayout>